--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
         <h1>NutriTrack</h1>
         <nav>
             <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="dashboard.html">Dashboard</a></li>
+                <li><a href="{{ url_for('index') }}">Home</a></li>
+                <li><a href="{{ url_for('dashboard') }}">Dashboard</a></li>
 
             </ul>
         </nav>
