--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <li><a href="{{ url_for('dashboard') }}">Dashboard</a></li>
 
             </ul>
-        </nav>
+        </nav>s
     </header>
 
     <section class = "welcome">
