--- a/dashboard.html
+++ b/dashboard.html
@@ -49,7 +49,7 @@
                     </select>
                 </div>
 
-                <div class="form-row">
+                <div class="form-rows">
                     <label for="waist">Waist Measurement (inches):</label>
                     <input
                         type="number"
